RESOLVED FIXED18880
REGRESSION (3.1.1-TOT): Arrow keys are sticky in Google Maps street view
https://bugs.webkit.org/show_bug.cgi?id=18880
Summary REGRESSION (3.1.1-TOT): Arrow keys are sticky in Google Maps street view
mitz
Reported 2008-05-03 21:44:14 PDT
Google Maps street view behaves as if a key, once pressed, remains down and repeats. Steps to reproduce: 1. Open the URL. 2. Click inside the street view to focus it. 3. Press the up arrow key. Expected: The street view to advance one step. Actual: The street view advances repeatedly.
Attachments
mitz
Comment 1 2008-05-03 21:45:03 PDT
Anders Carlsson
Comment 2 2008-05-07 11:07:23 PDT
Committed revision 32962.
Note You need to log in before you can comment on or make changes to this bug.