2008-05-07  Anders Carlsson  <andersca@apple.com>

Reviewed by Mitz.

        REGRESSION (3.1.1-TOT): Arrow keys are sticky in Google Maps street view
        https://bugs.webkit.org/show_bug.cgi?id=18880
        <rdar://problem/5909513>

        Stop suspending key up events before calling handleEvent.

        * Plugins/WebNetscapePluginEventHandlerCarbon.mm:
        (WebNetscapePluginEventHandlerCarbon::sendEvent):



Canonical link: https://commits.webkit.org/26165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32962 268f45cc-cd09-0410-ab3c-d52691b4dbfc